--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goel.js",
+  "name": "donfig",
   "version": "1.0.1",
   "description": "It is lightweight, dependency-free library for object parameters displaying, controlling & managing.",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/peter-hutsul/goel.git"
+    "url": "git+https://github.com/peter-hutsul/donfig.git"
   },
   "keywords": [
     "json",
@@ -34,7 +34,8 @@
   "author": "Peter Hutsul",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/peter-hutsul/goel/issues"
+    "url": "https://github.com/peter-hutsul/donfig/issues"
   },
-  "homepage": "https://github.com/peter-hutsul/goel#readme"
+  "homepage": "https://github.com/peter-hutsul/donfig#readme",
+  "dependencies": {}
 }
